--- a/prompts/tpch_prompt.yaml
+++ b/prompts/tpch_prompt.yaml
@@ -1,69 +1,77 @@
 _type: prompt
 input_variables:
-    ["input"]
+  - input
 template: |
-    Given below are the table structures in analytics database raw schema in snowflake cloud database
-    
-    create or replace TABLE PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS (
+  Given below are the table structures in the analytics database raw schema in the Snowflake cloud database:
+
+  CREATE OR REPLACE TABLE PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS (
     MEMBERS NUMBER(38,0),
     PROVIDER VARCHAR(16777216),
     MEDICATIONS VARCHAR(16777216),
-    primary key (MEMBERS, PROVIDER, MEDICATIONS),
-    foreign key (MEMBERS) references PRESCRIPTION.PUBLIC.MEMBERS(MEMBER_ID),
-    foreign key (PROVIDER) references PRESCRIPTION.PUBLIC.PROVIDER_DETAILS(PROVIDER_ID),
-    foreign key (MEDICATIONS) references PRESCRIPTION.PUBLIC.MEDICATION_DETAILS(MEDICATION_CODES)
-    );
-    create or replace TABLE PRESCRIPTION.PUBLIC.MEDICATION_DETAILS (
+    PRIMARY KEY (MEMBERS, PROVIDER, MEDICATIONS),
+    FOREIGN KEY (MEMBERS) REFERENCES PRESCRIPTION.PUBLIC.MEMBERS(MEMBER_ID),
+    FOREIGN KEY (PROVIDER) REFERENCES PRESCRIPTION.PUBLIC.PROVIDER_DETAILS(PROVIDER_ID),
+    FOREIGN KEY (MEDICATIONS) REFERENCES PRESCRIPTION.PUBLIC.MEDICATION_DETAILS(MEDICATION_CODES)
+  );
+
+  CREATE OR REPLACE TABLE PRESCRIPTION.PUBLIC.MEDICATION_DETAILS (
     MEDICATION_CODES VARCHAR(16777216),
     DRUGGROUP VARCHAR(16777216),
-    primary key (MEDICATION_CODES)
-    );
-    create or replace TABLE PRESCRIPTION.PUBLIC.MEMBERS (
+    PRIMARY KEY (MEDICATION_CODES)
+  );
+
+  CREATE OR REPLACE TABLE PRESCRIPTION.PUBLIC.MEMBERS (
     MEMBER_ID NUMBER(38,0),
     GENDER VARCHAR(16777216),
     AGE NUMBER(38,0),
-    primary key (MEMBER_ID)
-    );
-    create or replace TABLE PRESCRIPTION.PUBLIC.PROVIDER_DETAILS (
+    PRIMARY KEY (MEMBER_ID)
+  );
+
+  CREATE OR REPLACE TABLE PRESCRIPTION.PUBLIC.PROVIDER_DETAILS (
     PROVIDER_ID VARCHAR(16777216),
     SPECIALITY VARCHAR(16777216),
     QUALIFICATION VARCHAR(16777216),
-    primary key (PROVIDER_ID)
-    );
-    
-    take user questions and respond back with sql query. Return query in all capital letters. When asked for distribution, return count of unique values
-    example : 
-    user question : Who is the provider for member 6
-    your generated sql query : SELECT "PROVIDER_DETAILS"."PROVIDER_ID" 
-                                FROM "PRESCRIPTION"."PUBLIC"."MEMBER_PRESCRIPTIONS"
-                                JOIN "PRESCRIPTION"."PUBLIC"."PROVIDER_DETAILS" ON "MEMBER_PRESCRIPTIONS"."PROVIDER" = "PROVIDER_DETAILS"."PROVIDER_ID"
-                                WHERE "MEMBER_PRESCRIPTIONS"."MEMBERS" = 6;
-    example :
-    user question : What is the name of the medication that has been prescribed to member 8?
-    your generated sql query : SELECT "MEDICATION_DETAILS"."DRUGGROUP"
-                                FROM "PRESCRIPTION"."PUBLIC"."MEMBER_PRESCRIPTIONS"
-                                JOIN "PRESCRIPTION"."PUBLIC"."MEDICATION_DETAILS" ON "MEMBER_PRESCRIPTIONS"."MEDICATIONS" = "MEDICATION_DETAILS"."MEDICATION_CODES"
-                                WHERE "MEMBER_PRESCRIPTIONS"."MEMBERS" = 8;
-  
-    example :
-    user question :  How many members have consulted providers with qualification 'MD' ?
-    your generated sql query : select count(distinct a.members) as count_members from 
-                                PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS a
-                                inner join PRESCRIPTION.PUBLIC.PROVIDER_DETAILS b
-                                on a.provider = b.provider_id
-                                where b.qualification = 'MD';
-    example :
-    user question : What is the Gender distribution for members who are on Druggroup 'AntiCoagulants' below age of 50?
-    your generated sql query : select a.gender gender, count(distinct a.members) count_members from 
-                                (select a.members,c.Gender,b.Medication_codes,c.age from 
-                                PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS a
-                                left join PRESCRIPTION.PUBLIC.MEDICATION_DETAILS b
-                                on a.Medications = b.Medication_codes
-                                left join PRESCRIPTION.PUBLIC.MEMBERS c
-                                on a.members = c.member_id
-                                where b.DrugGroup= 'AntiCoagulants'
-                                and c.age <50 ) a
-                                group by a.gender;
-    
-    user question : {input}
-    your generated sql query :
+    PRIMARY KEY (PROVIDER_ID)
+  );
+
+  Take user questions and respond back with an SQL query. Return the query in all capital letters. When asked for distribution, return the count of unique values.
+
+  Example:
+  User question: Who is the provider for member 6?
+  Your generated SQL query: |
+    SELECT "PROVIDER_DETAILS"."PROVIDER_ID"
+    FROM "PRESCRIPTION"."PUBLIC"."MEMBER_PRESCRIPTIONS"
+    JOIN "PRESCRIPTION"."PUBLIC"."PROVIDER_DETAILS" ON "MEMBER_PRESCRIPTIONS"."PROVIDER" = "PROVIDER_DETAILS"."PROVIDER_ID"
+    WHERE "MEMBER_PRESCRIPTIONS"."MEMBERS" = 6;
+
+  Example:
+  User question: What is the name of the medication that has been prescribed to member 8?
+  Your generated SQL query: |
+    SELECT "MEDICATION_DETAILS"."DRUGGROUP"
+    FROM "PRESCRIPTION"."PUBLIC"."MEMBER_PRESCRIPTIONS"
+    JOIN "PRESCRIPTION"."PUBLIC"."MEDICATION_DETAILS" ON "MEMBER_PRESCRIPTIONS"."MEDICATIONS" = "MEDICATION_DETAILS"."MEDICATION_CODES"
+    WHERE "MEMBER_PRESCRIPTIONS"."MEMBERS" = 8;
+
+  Example:
+  User question: How many members have consulted providers with qualification 'MD'?
+  Your generated SQL query: |
+    SELECT COUNT(DISTINCT A.MEMBERS) AS COUNT_MEMBERS 
+    FROM PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS A
+    INNER JOIN PRESCRIPTION.PUBLIC.PROVIDER_DETAILS B ON A.PROVIDER = B.PROVIDER_ID
+    WHERE B.QUALIFICATION = 'MD';
+
+  Example:
+  User question: What is the gender distribution for members who are on Druggroup 'AntiCoagulants' below the age of 50?
+  Your generated SQL query: |
+    SELECT A.GENDER, COUNT(DISTINCT A.MEMBERS) AS COUNT_MEMBERS
+    FROM (
+      SELECT A.MEMBERS, C.GENDER, B.MEDICATION_CODES, C.AGE
+      FROM PRESCRIPTION.PUBLIC.MEMBER_PRESCRIPTIONS A
+      LEFT JOIN PRESCRIPTION.PUBLIC.MEDICATION_DETAILS B ON A.MEDICATIONS = B.MEDICATION_CODES
+      LEFT JOIN PRESCRIPTION.PUBLIC.MEMBERS C ON A.MEMBERS = C.MEMBER_ID
+      WHERE B.DRUGGROUP = 'AntiCoagulants' AND C.AGE < 50
+    ) A
+    GROUP BY A.GENDER;
+
+  User question: {input}
+  Your generated SQL query: |
